overflow hero 35 + 39 fix

--- a/src/css/project/_hero-35.sass
+++ b/src/css/project/_hero-35.sass
@@ -1,4 +1,5 @@
 .hero-35
+  overflow: hidden
   padding-top: 40px
   padding-bottom: 50px
 
