--- a/src/css/project/_hero-39.sass
+++ b/src/css/project/_hero-39.sass
@@ -1,4 +1,5 @@
 .hero-39
+  overflow: hidden
   padding-top: 110px
   padding-bottom: 80px
 
